css/styles.css
body {
  background-color: #57cc99;
  font-family: 'Signika Negative', sans-serif;
}

h1 {
  color: white;
}

h2 {
  border-bottom: 1px solid lightgray;
}

h3 {
  margin: 0;
  color: white;
}

h2,
h3,
h4 {
  font-weight: 400;
}

button {
  border-radius: 0.6rem;
  margin: 1rem 0;
  padding: 0.6rem 1rem;
  border: none;
  color: white;
  background-color: rgb(1, 123, 255);
  cursor: pointer;
}

li {
  list-style-type: none;
}

input {
  margin: 0.5rem;
  padding: 0.3rem;
  border-radius: 8px;
  border: lightgray 1px solid;
  box-shadow: 1px 2px 2px 0 rgb(201, 201, 201);
}

.white-line {
  border-bottom: 3px solid white;
}

.card {
  background-color: white;
  width: 500px;
  border-radius: 5rem;
  padding: 1rem;
  margin: 1rem auto;
  box-shadow: 2px 5px 5px 0 rgba(0, 0, 0, 1);
}

.correct {
  color: green;
  text-decoration: underline;
}

.incorrect {
  color: red;
  text-decoration: underline;
}

.overlay {
  background-color: rgba(0, 0, 0, 0.6);
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 99;
}

.modal {
  width: 19rem;
  background-color: white;
  margin: 8rem auto;
  padding: 0.1rem;
  border-radius: 2rem;
}

.green {
  color: green;
}

.orange {
  color: orange;
}

.red {
  color: red;
}

.score-text {
  font-weight: 700;
  border: none;
}

#lyrics {
  padding: 0 4rem 2rem 3rem;
}

#home {
  color: white;
  font-size: 2rem;
  cursor: pointer;
}

#arrowUp,
#arrowDown {
  font-size: 1.5rem;
  cursor: pointer;
}

#lyrics-input {
  padding: 0.5rem;
  background-color: rgba(87, 204, 153, 0.12);
  border: 1px solid black;
}

